client/src/css/About.css
#slide1,
#slide2,
#slide3 {
  display: none;
}
/* 
.mygrid {
  align-items: center;
  display: grid;
  grid-template-columns: 1fr 0.4fr;
} */

.slideicon {
  font-size: 20px;
  padding: 3px;
}

button.primary_blue {
  background: #3770ff;
}

.aboutbg {
  /* background-image: repeating-linear-gradient(
      90deg,
      rgba(243, 243, 243, 0.05) 0px,
      rgba(243, 243, 243, 0.05) 1px,
      transparent 1px,
      transparent 10px
    ),
    repeating-linear-gradient(
      0deg,
      rgba(243, 243, 243, 0.05) 0px,
      rgba(243, 243, 243, 0.05) 1px,
      transparent 1px,
      transparent 10px
    ),
    repeating-linear-gradient(
      0deg,
      rgba(243, 243, 243, 0.08) 0px,
      rgba(243, 243, 243, 0.08) 1px,
      transparent 1px,
      transparent 27px
    ),
    repeating-linear-gradient(
      90deg,
      rgba(243, 243, 243, 0.08) 0px,
      rgba(243, 243, 243, 0.08) 1px,
      transparent 1px,
      transparent 27px
    ),
    linear-gradient(90deg, rgb(0, 0, 0), rgb(0, 0, 0)); */
  background-color: #010409;

  background-attachment: fixed;

  margin-left: 40px;
}

.aboutbg h1 {
  font-weight: bolder;
  letter-spacing: 2px;
  font-size: 3rem;
  color: #e7f5ff;
}
.aboutglass {
  background: rgba(105, 102, 102, 0.034);
  box-shadow: 0 8px 32px 0 rgba(47, 192, 236, 0.37);
  backdrop-filter: blur(4px);
  -webkit-backdrop-filter: blur(4px);
  border-radius: 10px;
}
.aboutbg h6 {
  letter-spacing: 4px;
  opacity: 0.8;
  font-size: 1.5rem;
  color: #e7f5ff;
}

@media (max-width: 640px) {
  .aboutbg {
    margin-left: 0px;
  }

  .aboutbg {
    padding: 4vh 1.5rem;
  }

  .aboutbg h6 {
    font-size: 1.4rem;
  }
}

